0.28
    - Correct the attributions of the fixes in 0.27 (I swapped
      authors' names).

0.27  Fri Mar  4 07:56:58 CET 2005
    - Added missing localization of $_ in version().
      (thanks to Johan Lodin)
    - Fixed new_from_loaded() to return nothing when the module
      is in fact not loaded. (thanks to Boris Zentner)

0.26  Sun Jul 11 17:15:36 CEST 2004
    - Fix tests for Perl 5.8.x and 5.6.x.

0.25  Sun Jul 11 16:36:11 CEST 2004
    - Fix test to work around modules_required reporting
      different version numbers (0.25 vs. 0.250) under bleadperl.
    + Report subroutine/method calls and modules required
      inside anonymous subroutines.

0.24  Wed Oct  1 11:45:45 CEST 2003
    - Fixed version reported by modules_required for bleadperl.

0.23  Thu Sep  4 17:44:52 CEST 2003
    - Fixes for modules other than the one being examined
      loaded from paths containing spaces.

0.22  Mon Aug 18 14:44:23 CEST 2003
    + Fixed reporting of static method calls in Perl 5.8.1 RC4
    - Fixed reporting of module versions in Perl 5.8.1 RC4 when
      "use Foo 1.2.3;" was used

0.21  Fri Aug 15 18:48:53 CEST 2003
    - Added licensing information to Module::Info POD
    + Added modules_required(). Original patch by Martyn J. Pearce,
      adapted by me (Mattia Barbon)

0.20  Thu May 22 10:30:31 CEST 2003
    - Fixed a warning in module_info (thanks to Nathan Torkington)
    - Corrected number of skipped tests for Perl versions earlier
      than 5.6.1 (thanks to Mike Fragassi)
    - Fixed syntax error with Perl 5.004

0.19  Tue Apr  1 15:45:43 CEST 2003
    + Added package_versions() (patch by Ken Williams)
    - Fixed handling of v-strings in use/require

0.18  Sat Mar  8 17:44:24 CET 2003
    + Upgraded bundled B::Utils to 0.04 + Schwern patches
    - Fixed detection of require() statements in non-trivial BEGIN blocks

0.17  Sun Mar  2 11:01:55 CET 2003
    + Added module_info
    - Fixed a warning when enumerating packages

0.16  Wed Jan  1 21:21:31 CET 2003